# star_align

./: CMakeLists.txt  CMakePresets.json  basic_test.cpp  build_basic_test.bat  build_matching.bat  build_one.bat  build_simple.bat  build_standalone.bat  build_with_libraw.bat  check_header.bat  check_header.cpp  compile_star_align.bat  create_test_image.h  data.txt  demosaic_bggr.h  dev.md  main.cpp  png_encode.h  simple_build.bat  simple_star_align.cpp  standalone_test.cpp  star_align.cpp  star_align.h  star_align_api_design.md  test_png_encode_wb.cpp  test_star_align.cpp  test_wb_aggressive.cpp  test_white_balance.cpp
.claude/: settings.local.json
dss/: BackgroundCalibration.cpp  BackgroundCalibration.h  BitmapCharacteristics.h  BitmapExt.cpp  BitmapExtraInfo.h  BitmapInfo.h  BitmapIterator.h  CFABitmapInfo.h  ColorBitmap.h  ColorMultiBitmap.h  DSSProgress.cpp  DSSProgress.h  DeBloom.h  DynamicStats.h  FITSUtil.h  FlatPart.h  GrayBitmap.h  GreyMultiBitmap.h  MatchingStars.cpp  MatchingStars.h  MedianFilterEngine.h  MemoryBitmap.h  MultiBitmap.h  RAWUtils.cpp  RAWUtils.h  RegisterEngine.cpp  Settings.h  StackingTasks.cpp  Stars.h  avx_histogram.cpp  avx_histogram.h  avx_includes.h  avx_simd_check.cpp  avx_support.h  dss_qt.h  dssbase.h  dssrect.h  fitsio.h  histogram.h  matrix.h  (+6 more)
libraw/: CMakeLists.txt
libraw/include/: libraw.h
libraw/internal/: libraw_checked_buffer.h  x3f_tools.h
libraw/src/: libraw_c_api.cpp  libraw_datastream.cpp
src/: BilinearParameters.cpp  BilinearParameters.h  MatchingStars.cpp  MatchingStars.h  dss_compat.h  dss_tools.h  matrix.h  star_align.cpp  star_align.h
test/: test_star_align.cpp
